# taiji-log

./: .gitignore  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: main.rs
