[package]
name = "taiji-log"
version = "0.1.0"
edition = "2024"
description = "Taiji 日志过滤与 RAW 分组查看工具"
license = "MIT"
documentation = "https://docs.rs/taiji-log"
keywords = ["log", "cli", "jsonl", "taiji", "raw"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.39", features = ["derive"] }
glob = "0.3.2"
serde_json = "1.0.145"
